alignment issues and color issues resolved.

--- a/src/app/default/field-set-group/field-set-group.component.scss
+++ b/src/app/default/field-set-group/field-set-group.component.scss
@@ -3,27 +3,34 @@
     width: 800px;
     font-size: 11px;
 }
-.text-label{
+
+.text-label {
     display: block;
     text-transform: uppercase !important;
     font-size: 11px;
 }
 
-.form-group label{
-  text-align: right;
-  display: inline-block;
-  font-weight: bold;
-  width: 200px;
-  font-size: 11px; 
+.form-group label {
+    text-align: right;
+    display: inline-block;
+    font-weight: bold;
+    width: 200px;
+    font-size: 11px;
 }
-.col-form-label{
+
+.col-form-label {
     margin-left: 5px;
-  margin-right: 5px;font-size:11px;font-weight: bold;  text-align:right;
+    margin-right: 5px;
+    font-size: 11px;
+    font-weight: bold;
+    text-align:right;
+
 }
-.fw-bold
-{
+
+.fw-bold {
     text-align: right;
 }
+
 .hm-fieldset {
     margin-top: 3px;
     margin-left: -10px;
@@ -33,6 +40,7 @@
     padding: 0 10px 10px 10px !important;
     font-size: 11px;
 }
+
 .hm-fieldset-apn {
     margin-top: -85px;
     margin-left: 592px;
@@ -42,6 +50,7 @@
     padding: 0 10px 10px 10px !important;
     font-size: 11px;
 }
+
 .hm-fieldset-sale {
     margin-top: 17px;
     margin-left: -10px;
@@ -51,6 +60,7 @@
     padding: 0 10px 10px 10px !important;
     font-size: 11px;
 }
+
 .hm-fieldset-Prop {
     margin-top: -85px;
     margin-left: 592px;
@@ -60,4 +70,3 @@
     padding: 0 10px 10px 10px !important;
     font-size: 11px;
 }
-
